--- a/styles/main.css
+++ b/styles/main.css
@@ -5,9 +5,10 @@ html {
 }
 
 body {
-  margin: 0;
   overflow: hidden;
   color: white;
+  width: 100%;
+  height: 100%;
 }
 
 .mainDiv {
@@ -16,11 +17,15 @@ body {
   justify-content: center;
   background-color: #040d22;
   height: 100%;
+  width:100%;
 }
 
 #globe-container {
   height: 100%;
   background-color: #040d22;
+  align-content: space-around;
+  width: 100%;
+
 }
 
 /* .title {
@@ -32,3 +37,35 @@ body {
   font-size: 2vw;
   color: #8193b2 !important;
 } */
+.tooltip {
+  position: absolute;
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid black;
+  pointer-events: none; /* this makes sure the tooltip doesn't interfere with your mouse's detection of the underlying SVG elements */
+}
+
+#sidebar {
+  position: fixed;
+  right: 0;
+  width: 20%; /* Change this from 300px to 20% */
+  height: 100%;
+  overflow-y: auto;
+  background-color: #f5f5f5;
+  padding: 20px;
+  color: black;
+}
+.card {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+.card-title {
+  font-size: 18px;
+  font-weight: bold;
+}
+.card-description {
+  font-size: 14px;
+}
